force-app/main/default/objects/BLN_Remedy_Field_Mapping__mdt/BLN_Remedy_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>BLN_Remedy Field Mapping</label>
    <pluralLabel>BLN_Remedy Field Mappings</pluralLabel>
</CustomObject>