force-app/main/default/objects/BLN_Remedy_Field_Mapping__mdt/fields/JSON_attribute__c.field-meta.xml
<CustomField>
    <fullName>JSON_attribute__c</fullName>
    <label>JSON attribute</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>