force-app/main/default/objects/BLN_Remedy_Field_Mapping__mdt/fields/SFDC_Field_API__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Field_API__c</fullName>
    <label>SFDC Field API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>