force-app/main/default/objects/BLN_Remedy_Field_Mapping__mdt/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObjectName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>